--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-    <title>lAURA MARIN</title>
-    <Link rel="stylesheet" href="estilos.css"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LAURA MARIN</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-   <div id="container">
+    <div id="container">
         <div id="encabezado">
             <h1>LAURA NICOL MARIN SILVA</h1>
             <h2>INGENIERA DE SISTEMAS</h2>
         </div>
+
         <div id="contenido">
             <div class="caja-contenido">
                 <div class="titulo-caja"></div>
                 <h4>2006-2009</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipiscing elit.</p>
-                <p></p>
             </div>
+
             <div class="caja-contenido">
                 <div class="titulo-caja">Experiencia</div>
                 <h4>2008-2013</h4>
@@ -28,42 +29,157 @@
                 <h4>LOREM IPSUM SIT AMET</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipiscing elit.</p>
             </div>
+
             <div class="caja-contenido">
                 <div class="titulo-caja"></div>
                 <h4>2006-2009</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipiscing elit.</p>
             </div>
-
         </div>
 
         <div id="columna">
-            <img src="lala.jpg" alt"foto">
+            <img src="lala.jpg" alt="foto">
 
-        <div class="columna-contenido">
-            <div class="col-titulo">CONTACTO</div>
-            <div class="col-linea">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-rolodex" viewBox="0 0 16 16"><path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/><path d="M1 1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h.5a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h.5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6.707L6 1.293A1 1 0 0 0 5.293 1zm0 1h4.293L6 2.707A1 1 0 0 0 6.707 3H15v10h-.085a1.5 1.5 0 0 0-2.4-.63C11.885 11.223 10.554 10 8 10c-2.555 0-3.886 1.224-4.514 2.37a1.5 1.5 0 0 0-2.4.63H1z"/>
+            <div class="columna-contenido">
+                <div class="col-titulo">CONTACTO</div>
+
+                <div class="col-linea">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-rolodex" viewBox="0 0 16 16">
+                        <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
+                        <path d="M1 1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h.5a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h.5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6.707L6 1.293A1 1 0 0 0 5.293 1zm0 1h4.293L6 2.707A1 1 0 0 0 6.707 3H15v10h-.085a1.5 1.5 0 0 0-2.4-.63C11.885 11.223 10.554 10 8 10c-2.555 0-3.886 1.224-4.514 2.37a1.5 1.5 0 0 0-2.4.63H1z"/>
                     </svg>
                     <h6>LAURA MARIN SILVA</h6>
                 </div>
-                    
+
                 <div class="col-linea">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16"><path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/><path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/></Svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
+                        <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                        <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                    </svg>
                     <h6>57-320 320 3202</h6>
                 </div>
+
                 <div class="col-linea">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16"><path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
-                    </Svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                    </svg>
                     <h6>misena@sena.edu.co</h6>
                 </div>
+
                 <div class="col-linea">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
-                    </Svg>
-                <h6>Cr 10b #30c 58 sur</h6>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                    </svg>
+                    <h6>Cr 10b #30c 58 sur</h6>
+                </div>
+            </div>
+
+            <div class="columna-contenido">
+                <div class="col-titulo">IDIOMAS</div>
+
+                <div class="col-linea">
+                    <h5>ESPAÑOL</h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b3"></div>
+                        <div class="b-item-b4"></div>
+                        <div class="b-item-b5"></div>
+                    </div>
+                </div>
+
+                <div class="col-linea">
+                    <h5>INGLÉS</h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b3"></div>
+                        <div class="b-item-b0"></div>
+                        <div class="b-item-b0"></div>
+                    </div>
+                </div>
+
+                <div class="col-linea">
+                    <h5>FRANCÉS</h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b0"></div>
+                        <div class="b-item-b0"></div>
+                        <div class="b-item-b0"></div>
+                    </div>
+                </div>
+            <div class="columna-contenido">
+                <div class="col-titulo">HABILIDADES</div>
+
+                <div class="col-linea">
+                    <h5>PYTHON</h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b3"></div>
+                        <div class="b-item-b4"></div>
+                        <div class="b-item-b0"></div>
+                    </div>
+                </div>
+
+                <div class="col-linea">
+                    <h5>     JS  </h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b3"></div>
+                        <div class="b-item-b4"></div>
+                        <div class="b-item-b5"></div>
+                    </div>
+                </div>
+
+                <div class="col-linea">
+                    <h5>NODE JS</h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b0"></div>
+                        <div class="b-item-b0"></div>
+                        <div class="b-item-b0"></div>
+                    </div>
+                </div>
+                <div class="col-linea">
+                    <h5>DJANGO</h5>
+                    <div class="barra">
+                        <div class="b-item-b1"></div>
+                        <div class="b-item-b2"></div>
+                        <div class="b-item-b3"></div>
+                        <div class="b-item-b4"></div>
+                        <div class="b-item-b0"></div>
+                    </div>
                 </div>
             </div>
         </div>
-        (div.columna-contenido>(div.col-titulo>(div.col-linea)))
+            <div class="columna-contenido">
+            <div class="col-titulo">
+                <div class="linea-icons">AFICIONES</div>
+
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" min-height fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16"><path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849"/>
+                    </svg>
+                </div>
+
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" min-height fill="currentColor" class="bi bi-apple-music" viewBox="0 0 16 16"><path fill-rule="evenodd" d="m10.995 0 .573.001q.241 0 .483.007c.35.01.705.03 1.051.093.352.063.68.166.999.329a3.36 3.36 0 0 1 1.47 1.468c.162.32.265.648.328 1 .063.347.084.7.093 1.051q.007.241.007.483l.001.573v5.99l-.001.573q0 .241-.008.483c-.01.35-.03.704-.092 1.05a3.5 3.5 0 0 1-.33 1 3.36 3.36 0 0 1-1.468 1.468 3.5 3.5 0 0 1-1 .33 7 7 0 0 1-1.05.092q-.241.007-.483.008l-.573.001h-5.99l-.573-.001q-.241 0-.483-.008a7 7 0 0 1-1.052-.092 3.6 3.6 0 0 1-.998-.33 3.36 3.36 0 0 1-1.47-1.468 3.6 3.6 0 0 1-.328-1 7 7 0 0 1-.093-1.05Q.002 11.81 0 11.568V5.005l.001-.573q0-.241.007-.483c.01-.35.03-.704.093-1.05a3.6 3.6 0 0 1 .329-1A3.36 3.36 0 0 1 1.9.431 3.5 3.5 0 0 1 2.896.1 7 7 0 0 1 3.95.008Q4.19.002 4.432 0h.573zm-.107 2.518-4.756.959H6.13a.66.66 0 0 0-.296.133.5.5 0 0 0-.16.31c-.004.027-.01.08-.01.16v5.952c0 .14-.012.275-.106.39-.095.115-.21.15-.347.177l-.31.063c-.393.08-.65.133-.881.223a1.4 1.4 0 0 0-.519.333 1.25 1.25 0 0 0-.332.995c.031.297.166.582.395.792.156.142.35.25.578.296.236.047.49.031.858-.043.196-.04.38-.102.555-.205a1.4 1.4 0 0 0 .438-.405 1.5 1.5 0 0 0 .233-.55c.042-.202.052-.386.052-.588V6.347c0-.276.08-.35.302-.404.024-.005 3.954-.797 4.138-.833.257-.049.378.025.378.294v3.524c0 .14-.001.28-.096.396-.094.115-.211.15-.348.178l-.31.062c-.393.08-.649.133-.88.223a1.4 1.4 0 0 0-.52.334 1.26 1.26 0 0 0-.34.994c.03.297.174.582.404.792a1.2 1.2 0 0 0 .577.294c.237.048.49.03.858-.044.197-.04.381-.098.556-.202a1.4 1.4 0 0 0 .438-.405q.173-.252.233-.549a2.7 2.7 0 0 0 .044-.589V2.865c0-.273-.143-.443-.4-.42-.04.003-.383.064-.424.073"/>
+                </svg>
+                </div>
+
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" min-height fill="currentColor" class="bi bi-bicycle" viewBox="0 0 16 16"><path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5m1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139zM8 9.057 9.598 6.5H6.402zM4.937 9.5a2 2 0 0 0-.487-.877l-.548.877zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53z"/>
+                </svg>
+                </div>
+
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" min-height fill="currentColor" class="bi bi-book-fill" viewBox="0 0 16 16"><path d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+                </svg>
+                </div>
+            </div>
         <div class="circulo" id="c-1"></div>
         <div class="circulo" id="c-2"></div>
         <div class="circulo" id="c-3"></div>
